--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
     "axios": "^1.7.4",
     "chart.js": "^4.4.3",
     "react": "^18.3.1",
+    "react-canvas-confetti": "^2.0.7",
     "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
     "react-table-component": "^0.9.8",
     "styled-component": "^2.8.0",
     "web-vitals": "^2.1.4"
